Refactor support and resistance calculator into defined 3-step pipeline